--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="unfollow_election">Unfollow Election</string>
     <string name="ballot_information">Ballot Information</string>
     <string name="voting_locations">Voting Locations</string>
+    <string name="required_permisson">You need to allow location permissions to use this functionality.</string>
+    <string name="setting">Setting</string>
+    <string name="location_not_found">C\n</string>
+    <string name="cant_fetch_location">Can\'t get your current location, please try again later.</string>
+    <string name="location_required_error">Location services must be enabled to use this feature.</string>
 
     <!-- TODO: Add necessary string values -->
 
